crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_rename_modal_default.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 20)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│       ┌ Rename account ──────────────────────────────────────────────┐       │
│       │ Renaming the following account:                              │       │
│       │ GitHub:ben@example.com                                       │       │
│       │                                                              │       │
│       │ New label:  [ ben@example.com ]                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                  Enter submit  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
