crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_rename_modal_save_not_committed.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│       ┌ Rename account ──────────────────────────────────────────────┐       │
│       │ Renaming the following account:                              │       │
│       │ GitHub:ben@example.com                                       │       │
│       │                                                              │       │
│       │ New label:  [ ben@example.com ]                              │       │
│       │                                                              │       │
│       │ save not committed (committed=false)                         │       │
│       │                                                              │       │
│       │                  Enter submit  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
