crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_settings_modal_save_durability_unconfirmed.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│       ┌ Settings ────────────────────────────────────────────────────┐       │
│       │ Auto-lock:        [   ]                                      │       │
│       │   Timeout (s):    [ 300 ]                                    │       │
│       │                                                              │       │
│       │ Clipboard-clear:  [   ]                                      │       │
│       │   Timeout (s):    [ 20 ]                                     │       │
│       │                                                              │       │
│       │ save durability unconfirmed                                  │       │
│       │                                                              │       │
│       │                                                              │       │
│       │       Tab cycles fields  ·  Enter submit  ·  Esc cancel      │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
